--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;400;700&display=swap");
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: "Nunito", sans-serif;
   background-color: #e5e9f0;
+}
+
+/* Page Not Found */
+.page-not-found {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: rgba(68, 68, 68);
+  min-height: 80vh;
+}
+
+.page-not-found h2 {
+  font-size: 55px;
+}
+
+.page-not-found p {
+  font-size: 30px;
 }
 
 .recipeList {
