--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@ body {
 
 /* header */
 
-.content {
+.header {
   margin: auto;
   padding: 0 30px;
 }
@@ -45,7 +45,7 @@ body {
   /* padding: 10px 0; */
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
 }
-.navbar .content {
+.navbar .header {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -75,7 +75,7 @@ body {
   transition: all 0.3s ease;
 }
 .menu-list li a:hover,
-.favoriteIcon:hover {
+.headerIcon:hover {
   color: #007bff;
 }
 
@@ -102,17 +102,17 @@ body {
   top: 20px;
 }
 @media (max-width: 1230px) {
-  .content {
+  .header {
     padding: 0 60px;
   }
 }
 @media (max-width: 1100px) {
-  .content {
+  .header {
     padding: 0 40px;
   }
 }
 @media (max-width: 900px) {
-  .content {
+  .header {
     padding: 0 30px;
   }
 }
@@ -196,6 +196,34 @@ body {
 
 .favoriteIcon {
   color: white;
+}
+
+.headerForm {
+  border-radius: 30px;
+  background-color: #fff;
+}
+
+.headerForm > input {
+  border: none;
+  background-color: transparent;
+  outline: none;
+  font-size: 0.95rem;
+  font-weight: bold;
+  padding-left: 1em;
+  font-family: "Nunito", sans-serif;
+  color: #868e96;
+}
+
+::placeholder {
+  color: #868e96;
+  font-size: 0.95rem;
+  font-weight: bold;
+  padding-left: 1em;
+  font-family: "Nunito", sans-serif;
+}
+
+.searchIcon {
+  color: #868e96;
 }
 
 /*
