--- a/src/App.css
+++ b/src/App.css
@@ -38,11 +38,10 @@ body {
   width: 100%;
   z-index: 2;
   transition: all 0.5s ease-in;
+  background-color: #868e96;
 }
 .nav__black {
-  /* background: #1b1b1b; */
   background-color: #868e96;
-  /* padding: 10px 0; */
   box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
 }
 .navbar .header {
