--- a/src/style/sass/abstracts/_variables.scss
+++ b/src/style/sass/abstracts/_variables.scss
@@ -1,11 +1,10 @@
+$color-primary: #f0f2f5;
+
 $color-gray-light: #e5e9f0;
 
+$color-black: #000;
+$color-white: #fff;
 
-$color-black:#000;
-$color-white:#fff;
+$color-gray-light: #868e96;
 
-$color-gray-light:#868e96;
-
-
-
-$default-font-size:1.6rem;
+$default-font-size: 1.6rem;
