--- a/src/style/sass/base/_base.scss
+++ b/src/style/sass/base/_base.scss
@@ -1,15 +1,17 @@
 *,
 *::after,
 *::before {
-    margin: 0;
-    padding: 0;
-    box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit;
 }
 
-html{
-    font-size:62.5%; // 1 rem = 10 px; 10px/16px = 62.5%
+html {
+  font-size: 62.5%; // 1 rem = 10 px; 10px/16px = 62.5%
 }
 
-body{
-    box-sizing:border-box;
+body {
+  box-sizing: border-box;
+  // background-color: #f5f6fa;
+  background-color: $color-primary;
 }
