--- a/src/style/sass/abstracts/_variables.scss
+++ b/src/style/sass/abstracts/_variables.scss
@@ -1,10 +1,16 @@
+// color
 $color-primary: #f0f2f5;
 
-$color-gray-light: #e5e9f0;
+$color-gray-light: #ccd0d4;
+
+// $color-gray-dark-1: #5e6771;
+$color-gray-dark-1: #59626b;
+// $color-gray-dark-1: #606771;
+$color-gray-dark-2: #64676b;
+$color-gray-dark-3: #7f8387;
 
 $color-black: #000;
 $color-white: #fff;
 
-$color-gray-light: #868e96;
-
+// font size
 $default-font-size: 1.6rem;
