--- a/src/style/sass/base/_utilities.scss
+++ b/src/style/sass/base/_utilities.scss
@@ -1,16 +1,23 @@
-.u-center-text{
-    text-align:center;
+.u-center-text {
+  text-align: center;
 }
 
-.u-margin-bottom-big{
-    margin-bottom:8rem;
+.u-margin-bottom-big {
+  margin-bottom: 8rem;
 }
 
-.u-margin-bottom-medium{
-    margin-bottom:4rem;
+.u-margin-bottom-medium {
+  margin-bottom: 4rem;
 }
 
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem;
+}
 
-.u-margin-bottom-small{
-    margin-bottom:1.5rem;
+.u-border-bottom {
+  border-bottom: 1px solid $color-gray-light;
+}
+
+.u-border-top {
+  border-top: 1px solid $color-gray-light;
 }
