--- a/src/style/sass/components/_favorite.scss
+++ b/src/style/sass/components/_favorite.scss
@@ -1,89 +1,53 @@
-.favorite{
-    margin:15rem 0;
+.favorite {
+  margin: 3rem auto;
 
+  &__titles {
 
-    &-titles {
-        margin: 2rem 0 1rem 0;       
-      }
-
-    &-heading {
-        font-size: $default-font-size;
-        font-weight: 400;
-        text-transform: uppercase;
-      } 
-    
-    &-items{
-        color:gray;
-        font-size:1.4rem;      
+    span:first-child {
+      padding-left: 2rem;
     }
-
-    &-item {
-        border-top: 1px solid rgb(187, 187, 187);
-        padding: 1rem 0;
-       
-
-        a{
-            text-decoration:none;
-            color:gray; 
-        }
-     
-      } 
-      
-    &-title{
-        padding-left: 0.5rem;
-    }  
-
-    &-label {
-        display: grid;
-       align-items: center;
-       grid-template-columns: 1fr 1fr;
-       column-gap: 0.5rem;        
-
-       img {
-        width: 100px;
-        max-width: 100%;
-        margin-right: 1rem;
-      }
-
-      h3 {
-        font-weight: 400;
-      }
-     }  
-
-    &-calories{
-        display:flex;
-    } 
+  }
 }
 
+.favorite__item {
+  list-style: none;
+  padding: 1rem 0;
 
+  &--label {
+    display: grid;
+    align-items: center;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 0.5rem;
+
+    &--image {
+      padding: 1rem;
+      width: 150px;
+      margin-right: 1rem;
+
+      img {
+        width: 100%;
+        object-fit: contain;
+      }
+    }
+  }
+
+  a {
+    text-decoration: none;
+    color: #5f6266;
+  }
+
+  &--calories {
+    display: flex;
+    align-items: center;
+  }
+}
 
 // grid
 
-  .favorite-item,
-  .favorite-titles {
-    display: grid;
-    align-items: center;
-    grid-template-columns: 3fr 2fr 2fr 1fr;
-    column-gap: 0.5rem;
-  }
-  
-
-  
-.remove {
-    color: #434c5e;
-
-    &-icon:hover{
-        cursor:pointer;
-        animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
-        transform: translate3d(0, 0, 0);
-        backface-visibility: hidden;
-        perspective: 1000px;
-        color:$color-black;
-    }
-  }
-
-  
-  
-
-  
-  
+.favorite__item,
+.favorite__titles {
+  display: grid;
+  align-items: center;
+  grid-template-columns: 3fr 1fr 1fr 1fr;
+  column-gap: 0.5rem;
+}
