--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -20,6 +20,7 @@
 @import "./components/banner";
 @import "./components/recipeCard";
 @import "./components/sidebar";
+@import "./components/skeleton";
 
 // layout
 @import "./layout/home";
