--- a/src/style/sass/components/_sidebar.scss
+++ b/src/style/sass/components/_sidebar.scss
@@ -3,17 +3,18 @@
     z-index: 2000;
     cursor: pointer;
     position: fixed;
-    top: 2.5rem;
-    right: 4rem;
+    top: 1.5rem;
+    right: 3rem;
+    display: none;
   }
 
   &__nav {
-    position: fixed;
-    z-index: 1500;
     height: 100vh;
+    width: 100%;
+    position: fixed;
     top: 0;
     right: -100%;
-    width: 250px;
+    z-index: 1500;
     background-color: $color-gray-light;
     transition: all 850ms cubic-bezier(0.6, 1.05, 1, 0.93);
   }
@@ -32,14 +33,6 @@
     text-align: left;
   }
 
-  &__toggle {
-    width: 90%;
-    height: 80px;
-    display: flex;
-    justify-content: end;
-    align-items: center;
-  }
-
   &__item {
     margin: 1rem;
   }
@@ -51,7 +44,7 @@
       text-decoration: none;
       cursor: pointer;
       padding: 1rem 2rem;
-      font-size: 2rem;
+      font-size: 3rem;
       font-weight: 500;
       text-transform: uppercase;
       color: white;
@@ -79,10 +72,13 @@
   }
 }
 
-.menu-bars {
-  transform: scale(1.3);
+.menu-icon {
+  transform: scale(1.5);
+  color: $color-gray-dark-1;
 }
 
-.menu-icon {
-  color: $color-gray-dark-1;
+@media (max-width: 780px) {
+  .sidebar__menu {
+    display: block;
+  }
 }
