--- a/src/style/sass/layout/_header.scss
+++ b/src/style/sass/layout/_header.scss
@@ -1,9 +1,5 @@
-.header {
-  margin: auto;
-  padding: 0 3rem;
-}
 .navbar {
-  padding: 15px 20px;
+  padding: 1.5rem 2rem;
   position: fixed;
   top: 0;
   width: 100%;
@@ -11,101 +7,75 @@
   transition: all 0.5s ease-in;
   background-color: white;
   box-shadow: 0px 5px 8px -9px rgba(0, 0, 0, 0.75);
-}
-.nav__black {
-  // box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
-}
-.navbar .header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
 
-.navbar .logo a {
-  color: black;
-  font-size: 30px;
-  font-weight: 600;
-  text-decoration: none;
-  cursor: pointer;
-}
-.navbar .menu-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  right: 5rem;
-}
-.menu-list li {
-  list-style: none;
-}
-.menu-list li a {
-  color: black;
-  font-size: 18px;
-  font-weight: 500;
-  margin-left: 25px;
-  text-decoration: none;
-  transition: all 0.3s ease;
-}
-.menu-list li a:hover,
-.headerIcon:hover {
-  color: #007bff;
+  &__black {
+    // box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
+  }
+
+  &__header {
+    margin: auto;
+    padding: 0 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  &__logo {
+    color: $color-black;
+    font-size: 3rem;
+    font-weight: 600;
+    text-decoration: none;
+    cursor: pointer;
+  }
+
+  &__list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    right: 5rem;
+    list-style: none;
+  }
+
+  &__link {
+    color: black;
+    font-size: 18px;
+    font-weight: 500;
+    margin-left: 25px;
+    text-decoration: none;
+    transition: all 0.3s ease;
+  }
+  &__icon {
+    color: $color-gray-dark-3;
+    &:hover {
+      color: $color-gray-dark-1;
+    }
+  }
 }
 
 @media (max-width: 1230px) {
-  .header {
+  .navbar__header {
     padding: 0 60px;
   }
 }
 @media (max-width: 1100px) {
-  .header {
+  .navbar__header {
     padding: 0 40px;
   }
 }
 @media (max-width: 900px) {
-  .header {
+  .navbar__header {
     padding: 0 30px;
   }
 }
-@media (max-width: 868px) {
-  body.disabled {
-    overflow: hidden;
-  }
-  .icon {
-    display: block;
-  }
-  .icon.hide {
-    display: none;
-  }
-  .navbar .menu-list {
-    position: fixed;
-    height: 100vh;
-    width: 100%;
-    max-width: 400px;
-    left: -100%;
-    top: 0px;
-    display: block;
-    padding: 40px 0;
-    text-align: center;
-    background: #222;
-    transition: all 0.3s ease;
-  }
-  .navbar.show .menu-list {
-    left: 0%;
-  }
-  .navbar .menu-list li {
-    margin-top: 45px;
-  }
-  .navbar .menu-list li a {
-    font-size: 23px;
-    margin-left: -100%;
-    transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  }
-  .navbar.show .menu-list li a {
-    margin-left: 0px;
-  }
-}
-@media (max-width: 380px) {
-  .navbar .logo a {
-    font-size: 27px;
+@media (max-width: 780px) {
+  .navbar {
+    &__logo {
+      font-size: 3.5rem;
+    }
+    &__list {
+      display: none;
+      transition: 0.6s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+    }
   }
 }
