--- a/src/style/sass/layout/_home.scss
+++ b/src/style/sass/layout/_home.scss
@@ -27,7 +27,6 @@
   }
 }
 
-
 .recipeList {
   display: flex;
   flex-wrap: wrap;
@@ -35,4 +34,20 @@
   align-items: center;
   margin: 6rem auto;
   padding: 3rem;
+
+  &__btn {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  &__link {
+    margin: 1rem;
+
+    span {
+      display: inline-block;
+      font-size: 2.5rem;
+      padding: 1rem 2rem;
+    }
+  }
 }
