add materialUI folder && add home card back text

--- a/src/style/sass/layout/_home.scss
+++ b/src/style/sass/layout/_home.scss
@@ -32,7 +32,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin: 6rem auto;
+  margin: 4rem auto 1rem auto;
   padding: 3rem;
 
   &__btn {
