--- a/src/style/sass/components/_card.scss
+++ b/src/style/sass/components/_card.scss
@@ -44,8 +44,28 @@
     &--back {
       transform: rotateY(180deg);
 
+      &--heading {
+        width: 90%;
+        padding: 1rem;
+        line-height: 3rem;
+        font-size: 2rem;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        text-align: left;
+        color: $color-gray-dark-2;
+
+        span {
+          display: block;
+          position: absolute;
+          right: 3rem;
+          margin-top: 3rem;
+        }
+      }
+
       &-1 {
-        background-color: #fff;
+        background-color: $color-primary;
       }
     }
   }
