--- a/src/style/sass/components/_recipeCard.scss
+++ b/src/style/sass/components/_recipeCard.scss
@@ -1,25 +1,28 @@
 .recipeCard {
+  padding: 1rem;
+  margin: 3rem;
+  &__cards {
     position: relative;
     transition: transform 0.2s;
     border-radius: 1rem;
     overflow: hidden;
     box-shadow: 0 4px 21px -12px rgba(0, 0, 0, 0.79);
-    margin: 2rem 2rem;
-  
-    a {
-      text-decoration: none;
-      color: #fff;
-    }
-  
-    &-heading {
-      font-size: 1.8rem;
-      font-weight: 500;
-    }
-  
-    &-calories {
-      text-align: center;
-      font-size: 1.5rem;
-      color: $color-gray-dark-3;
-    }
+    margin: 1.5rem;
   }
-  
+
+  &__link {
+    text-decoration: none;
+    color: #fff;
+  }
+  &-heading {
+    font-size: 2rem;
+    font-weight: 700;
+    letter-spacing: 0.2rem;
+    color: $color-gray-dark-2;
+  }
+
+  &-icon {
+    font-size: 160% !important;
+    color: $color-gray-dark-3;
+  }
+}
