--- a/src/style/sass/components/_skeleton.scss
+++ b/src/style/sass/components/_skeleton.scss
@@ -14,7 +14,7 @@
   }
 
   &.title {
-    width: 70%;
+    width: 100%;
     height: 2rem;
     margin-bottom: 1.2rem;
   }
@@ -26,8 +26,8 @@
   }
 
   &.pic {
-    width: 340px;
-    height: 190px;
+    width: 100%;
+    height: 25vh;
     margin-bottom: 1.5rem;
   }
 
