--- a/src/style/sass/components/_recipeCard.scss
+++ b/src/style/sass/components/_recipeCard.scss
@@ -15,6 +15,7 @@
     color: #fff;
   }
   &-heading {
+    text-transform: capitalize;
     font-size: 2rem;
     font-weight: 700;
     letter-spacing: 0.2rem;
