--- a/src/style/sass/components/_card.scss
+++ b/src/style/sass/components/_card.scss
@@ -2,15 +2,15 @@
   perspective: 15000px;
   -moz-perspective: 15000px;
   position: relative;
-  height: 300px;
-  width: 350px;
+  height: 30rem;
+  width: 35rem;
   overflow: hidden;
   margin: 4rem;
   border-radius: 10px;
   overflow: hidden;
 
   &__side {
-    height: 300px;
+    height: 30rem;
     transition: all 0.8s ease;
     position: absolute;
     top: 0;
