--- a/src/style/sass/components/_scrollTop.scss
+++ b/src/style/sass/components/_scrollTop.scss
@@ -5,7 +5,7 @@
   align-items: center;
   bottom: 7.5%;
   right: 5%;
-  background: hsl(0, 0%, 25%);
+  background-color: hsl(0, 0%, 25%);
   height: 60px;
   width: 60px;
   border-radius: 50%;
@@ -15,23 +15,20 @@
   display: none;
   animation: fadeIn 0.3s;
   transition: opacity 0.4s;
-  opacity: 0.7;
+  opacity: 0.5;
   z-index: 1000;
   cursor: pointer;
   box-shadow: 0px 0px 20px -6px rgba(66, 63, 66, 0.81);
 
-  i {
+  &__icon {
+    transform: scale(3);
     color: $color-white;
-    font-size: 1.8rem;
     transition: all 0.3s ease;
   }
 
   &:hover {
     opacity: 1;
-    background: hsl(0, 0%, 20%);
-    i {
-      color: $color-white;
-    }
+    background-color: hsl(0, 0%, 20%);
   }
 
   &:active {
