--- a/src/style/sass/layout/_home.scss
+++ b/src/style/sass/layout/_home.scss
@@ -28,12 +28,16 @@
 }
 
 .recipeList {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 4rem auto 1rem auto;
-  padding: 3rem;
+  margin-top: 5rem;
+  margin-bottom: 4rem;
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem auto 1rem auto;
+    padding: 3rem;
+  }
 
   &__btn {
     display: flex;
@@ -42,7 +46,7 @@
   }
 
   &__link {
-    margin: 1rem;
+    margin: 0.5rem;
 
     span {
       display: inline-block;
