modified jsconfig & delete recipeFav.scss

--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -23,12 +23,12 @@
 @import "./components/skeleton";
 
 // layout
-@import "./layout/home";
+
 @import "./layout/footer";
 @import "./layout/header";
 
 // pages
 
-@import "./pages/recipeFav";
+@import "./pages/home";
 @import "./pages/recipeDetail";
 @import "./pages/pnf";
