--- a/src/style/sass/pages/_home.scss
+++ b/src/style/sass/pages/_home.scss
@@ -55,3 +55,20 @@
     }
   }
 }
+
+
+.recipeFav {
+  padding: 5rem;
+  margin: 10rem 0rem;
+
+  &__empty {
+    font-size: 20px;
+    margin-top: 2rem;
+    color: rgb(84, 84, 84);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+
