--- a/src/style/sass/base/_base.scss
+++ b/src/style/sass/base/_base.scss
@@ -7,8 +7,19 @@
 }
 
 html {
-  min-height: 100%;
   font-size: 62.5%; // 1 rem = 10 px; 10px/16px = 62.5%
+
+  @include respond(tab-land) {
+    font-size: 56.25%; //1 rem = 9px, 9/16 = 50%
+  }
+
+  @include respond(tab-port) {
+    font-size: 50%; //1 rem = 8px, 8/16 = 50%
+  }
+
+  @include respond(big-desktop) {
+    font-size: 75%; //1rem = 12, 12/16
+  }
 }
 
 body {
