--- a/src/style/sass/base/_typography.scss
+++ b/src/style/sass/base/_typography.scss
@@ -19,6 +19,11 @@ body {
     animation-name: moveInLeft;
     animation-duration: 1s;
     animation-timing-function: ease-out;
+
+    @include respond(phone) {
+      font-size: 5rem;
+      letter-spacing: 1rem;
+    }
   }
 
   &--sub {
@@ -27,6 +32,10 @@ body {
     font-weight: 700;
     letter-spacing: 2.6rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -37,6 +46,14 @@ body {
   text-transform: uppercase;
   color: $color-gray-dark-1;
   letter-spacing: 1rem;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 }
 
 .heading-tertiary {
@@ -45,6 +62,10 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.5rem;
   color: $color-gray-dark-2;
+
+  @include respond(phone) {
+    letter-spacing: none;
+  }
 }
 
 .paragraph {
@@ -55,5 +76,9 @@ body {
 
   &:not(:last-child) {
     margin-bottom: 2rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2rem;
   }
 }
