--- a/src/style/sass/main.scss
+++ b/src/style/sass/main.scss
@@ -1,6 +1,8 @@
 // abstracts
 
 @import "./abstracts/variables";
+@import "./abstracts/mixins";
+
 
 // base
 
@@ -26,6 +28,7 @@
 
 @import "./layout/footer";
 @import "./layout/header";
+
 
 // pages
 
