--- a/src/style/sass/pages/_recipeDetail.scss
+++ b/src/style/sass/pages/_recipeDetail.scss
@@ -1,150 +1,150 @@
 .recipeDetail {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  padding: 2rem;
+  margin: 3rem auto;
+  padding: 3rem;
+
+  &__left {
+    flex: 2;
+    margin-right: 5rem;
+    margin-top: 5rem;
+  }
+
+  &__right {
+    flex: 1;
+    margin-top: 5rem;
+    height: 550px;
+    overflow: hidden;
+
+    &:hover {
+      overflow-y: scroll;
+    }
+  }
+}
+
+.info {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__top {
+    padding: 1rem;
+    width: 90%;
+
+    h2 {
+      padding: 1rem;
+    }
+  }
+
+  &__bottom {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-    padding: 2rem;
-    margin: 3rem auto;
-    padding: 3rem;
-  
-    &__left {
-      flex: 2;
-      margin-right: 5rem;
-      margin-top: 5rem;
-    }
-  
-    &__right {
-      flex: 1;
-      margin-top: 5rem;
-      height: 550px;
-      overflow: hidden;
-  
-      &:hover {
-        overflow-y: scroll;
-      }
-    }
-  }
-  
-  .info {
-    padding: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-    &__top {
-      padding: 1rem;
-      width: 90%;
-  
-      h2 {
-        padding:1rem;
-      }
-    }
-  
-    &__bottom {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-      padding: 2rem;
-      width: 90%;
-  
-      &--image {
-        margin-right: 2rem;
-        margin: 0 auto;
-  
-        img {
-          width: 100%;
-          object-fit: contain;
-        }
-      }
-  
-      &--span {
-        text-align: center;
-        line-height: 5rem;
-  
-        span {
-          display: inline-block;
-          padding: 1rem;
-        }
-      }
-    }
-  }
-  
-  .ingredient {
-    padding: 1rem;
-  
-    &__heading {
-      span {
-        padding: 1rem;
-        display: inline-block;
-        width: 90%;
-      }
-    }
-  
-    &__details {
-      padding: 2rem;
-    }
-  }
-  
-  .ingredient__detail {
-    padding: 2rem;
-    display: flex;
-    align-items: center;
     justify-content: space-between;
-  
-    &:not(:last-child) {
-      margin-bottom: 2rem;
-    }
-  
-    &--span {
-      margin-right: 1rem;
-    }
-  
+    align-items: center;
+    padding: 2rem;
+    width: 90%;
+
     &--image {
-      padding: 1rem;
-  
+      margin-right: 2rem;
+      margin: 0 auto;
+
+      @include respond(phone) {
+        margin-bottom: 3rem;
+      }
+
       img {
-        border-radius: 50%;
-        width: 150px;
+        width: 100%;
         object-fit: contain;
       }
     }
-  }
-  
-  @media (max-width: 990px) {
-    .recipeDetail {
-      display: block;
-      flex-direction: column;
-      align-items: center;
-  
-      &__left {
-        margin-left: auto;
-        margin-right: auto;
+
+    &--span {
+      text-align: center;
+      line-height: 5rem;
+
+      span {
+        display: inline-block;
+        padding: 1rem;
       }
-  
-      &__right {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-  
-    .info {
-      flex-direction: column;
-      align-items: center;
-
-  
-      &__bottom {
-        flex-direction: column;
-        align-items: center;
-
-      }
-    }
-  
-    .ingredient__detail {
-      flex-direction: column;
-      align-items: center;
-
-      
-
     }
   }
-  
+}
+
+.ingredient {
+  padding: 1rem;
+
+  &__heading {
+    span {
+      padding: 1rem;
+      display: inline-block;
+      width: 90%;
+    }
+  }
+
+  &__details {
+    padding: 2rem;
+  }
+}
+
+.ingredient__detail {
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  &:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+
+  &--span {
+    margin-right: 1rem;
+  }
+
+  &--image {
+    padding: 1rem;
+
+    img {
+      border-radius: 50%;
+      width: 150px;
+      object-fit: contain;
+    }
+  }
+}
+
+@media (max-width: 990px) {
+  .recipeDetail {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+
+    &__left {
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    &__right {
+      margin-left: auto;
+      margin-right: auto;
+      overflow-y: hidden;
+      height: 100%;
+    }
+  }
+
+  .info {
+    flex-direction: column;
+    align-items: center;
+
+    &__bottom {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  .ingredient__detail {
+    flex-direction: column;
+    align-items: center;
+  }
+}
