--- a/src/style/sass/base/_typography.scss
+++ b/src/style/sass/base/_typography.scss
@@ -20,9 +20,16 @@ body {
     animation-duration: 1s;
     animation-timing-function: ease-out;
 
+    @include respond(tab-land) {
+      letter-spacing: 1.5rem;
+    }
+
+    @include respond(tab-port) {
+      font-size: 4.5rem;
+      letter-spacing: 1rem;
+    }
     @include respond(phone) {
       font-size: 5rem;
-      letter-spacing: 1rem;
     }
   }
 
@@ -32,6 +39,14 @@ body {
     font-weight: 700;
     letter-spacing: 2.6rem;
     animation: moveInRight 1s ease-out;
+
+    @include respond(tab-land) {
+      letter-spacing: 2.3rem;
+    }
+
+    @include respond(tab-port) {
+      letter-spacing: 1.5rem;
+    }
 
     @include respond(phone) {
       letter-spacing: 0.5rem;
