--- a/src/style/sass/pages/_recipeDetail.scss
+++ b/src/style/sass/pages/_recipeDetail.scss
@@ -1,26 +1,22 @@
 .recipeDetail {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
+  flex-direction: column;
+  justify-content: space-between;
   padding: 2rem;
-  margin: 3rem auto;
+  margin: 4rem auto;
+  align-items: center;
   padding: 3rem;
 
-  &__left {
-    flex: 2;
-    margin-right: 5rem;
+  &__top {
+    width: 85%;
     margin-top: 5rem;
+    margin-bottom: 3rem;
   }
 
-  &__right {
-    flex: 1;
+  &__bottom {
     margin-top: 5rem;
-    height: 550px;
+    width: 85%;
     overflow: hidden;
-
-    &:hover {
-      overflow-y: scroll;
-    }
   }
 }
 
@@ -83,53 +79,56 @@
       width: 90%;
     }
   }
-
   &__details {
     padding: 2rem;
   }
-}
 
-.ingredient__detail {
-  padding: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
+  &__detail {
+    height: 50vh;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
 
-  &:not(:last-child) {
-    margin-bottom: 2rem;
-  }
+    &--span {
+      margin-right: 1rem;
+      height: 10vh;
+    }
 
-  &--span {
-    margin-right: 1rem;
-  }
+    &--image {
+      height: 30vh;
+      padding: 1rem;
 
-  &--image {
-    padding: 1rem;
-
-    img {
-      border-radius: 50%;
-      width: 150px;
-      object-fit: contain;
+      img {
+        margin: 2rem auto;
+        box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px,
+          rgba(0, 0, 0, 0.23) 0px 3px 6px;
+        border-radius: 50%;
+        width: 150px;
+        object-fit: contain;
+      }
     }
   }
 }
 
-@media (max-width: 990px) {
+@include respond(phone) {
   .recipeDetail {
     display: block;
     flex-direction: column;
     align-items: center;
 
-    &__left {
+    &__top {
       margin-left: auto;
       margin-right: auto;
+      width: 100%;
     }
 
-    &__right {
+    &__bottom {
       margin-left: auto;
       margin-right: auto;
-      overflow-y: hidden;
       height: 100%;
+      width: 100%;
     }
   }
 
@@ -143,8 +142,17 @@
     }
   }
 
-  .ingredient__detail {
-    flex-direction: column;
-    align-items: center;
+  .ingredient {
+    &__details {
+      flex-direction: column;
+      display: flex;
+      flex-direction: row;
+    }
+    &__detail {
+      height: 40vh;
+      &:not(:last-child) {
+        margin-bottom: 2rem;
+      }
+    }
   }
 }
