--- a/src/style/sass/components/_button.scss
+++ b/src/style/sass/components/_button.scss
@@ -1,24 +1,25 @@
 .btn-text {
-    &:link,
-    &:visited {
-        font-size: $default-font-size;
-        color: $color-black;
-        display: inline-block;
-        text-decoration: none;
-        border-bottom: 1px solid $color-black;
-        padding: 3px;
-        transition: all .2s;
-    }
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-black;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $color-black;
+    padding: 3px;
+    transition: all 0.2s;
+    font-size: 2.5rem;
+  }
 
-    &:hover {
-        background-color: $color-black;
-        color: $color-white;
-        box-shadow: 0 1rem 2rem rgba($color-black, .15);
-        transform: translateY(-2px);
-    }
+  &:hover {
+    background-color: $color-black;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.15);
+    transform: translateY(-2px);
+  }
 
-    &:active {
-        box-shadow: 0 .5rem 1rem rgba($color-black, .15);
-        transform: translateY(0);
-    }
+  &:active {
+    box-shadow: 0 0.5rem 1rem rgba($color-black, 0.15);
+    transform: translateY(0);
+  }
 }
